[🐛 Fix] Hide graph view on mobile

--- a/theme/static/sass/_graph.sass
+++ b/theme/static/sass/_graph.sass
@@ -32,18 +32,6 @@
     opacity: 20%
     stroke-width: 3px
 
-@media screen and (max-width: 640px)
-  .graphContainer
-    overflow: auto
-    width: 100vw
-    margin-left: -10vw
-
-  .node text
-    font-size: 13px
-
-  path.link
-    stroke-width: 2.8px
-
 @keyframes stretch
   0%
     transform: scale(.9)
