--- a/theme/static/sass/index.sass
+++ b/theme/static/sass/index.sass
@@ -39,6 +39,8 @@ section
         padding: 10px 15px
 
 @media only screen and (max-width: 800px)
+  section#graphView
+    display: none
   section
     padding-top: 50px
     .card
